<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">REverSI</string>
    <string name="txtGameSettings">Game Settings</string>
    <string name="txtGameMode">Game Mode:</string>
    <string name="gameStartWelcome">Welcome! :)</string>

    <string-array name="txtGameModes">
        <item>vs AI</item>
        <item>vs Human</item>
    </string-array>

    <string name="txtDifficulty">Game Difficulty:</string>

    <string-array name="txtDifficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="txtCategory">Category:</string>

    <string-array name="txtCategories">
        <item>All Categories</item>
        <item>General</item>
    </string-array>

    <string name="txtSubmit">Submit</string>
    <string name="title_activity_game_board">REverSI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_questions">Questions</string>
    <string name="game_over_title">Game Over!</string>
    <string name="game_over_win">Congratulations, you won!</string>
    <string name="game_over_tie">You tied.</string>
    <string name="game_over_lose">You lost :(</string>
    <string name="title_activity_score">High Scores</string>
    <string name="score_score">Score</string>
    <string name="score_name">Name</string>

</resources>
